[package]
name = "flying_v"
version = "0.1.0"
authors = ["Elliot Jackson <elliotekj@gmail.com>"]

[dependencies]
chrono = "0.3.*"
clap = { version = "2.21.*", features = ["yaml"] }
dotenv = "0.8.*"
globset = "0.1.*"
hyper = "0.10.*"
lazy_static = "0.2.*"
notify = "4.0.*"
pulldown-cmark = "0.0.*"
regex = "0.2.*"
serde = "0.9.*"
serde_derive = "0.9.*"
serde_json = "0.9.*"
tempdir = "0.3.*"
tera = "0.7.*"
walkdir = "1.0.*"
